--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 before_install:
   - docker pull ubuntu:rolling
-  - docker run -itd --name build ubuntu
+  - docker run -itd --name build ubuntu:rolling
   - docker exec build git clone https://github.com/OpenBangla/OpenBangla-Keyboard.git /repo
 script:
   - docker exec build cmake -H/repo -B/build
