--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_install:
 script:
   - docker exec build cmake -H/repo -B/build
   - docker exec build cmake --build /build
+  - docker exec build ls
