--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ before_install:
   - docker exec build git clone https://github.com/OpenBangla/OpenBangla-Keyboard.git /repo
 script:
   - docker exec build cmake -H/repo -B/build -GNinja -DCPACK_GENERATOR=DEB
-  - docker exec build cd build
-  - docker exec build ninja package
+  - docker exec build ninja package -C build
