image name change

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: cpp
 services:
   - docker
 before_install:
-  - docker pull ubuntu:rolling
-  - docker run -itd --name build ubuntu:rolling
+  - docker pull ubuntu:17.10
+  - docker run -itd --name build ubuntu:17.10
   - docker exec build apt-get update
   - docker exec build apt-get -y install git build-essential cmake libibus-1.0-dev qt5-default qtdeclarative5-dev ninja-build
   - docker exec build git clone https://github.com/OpenBangla/OpenBangla-Keyboard.git /repo
