--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ matrix:
       services: docker
 before_install:
   - chmod +x script.sh
-  - chmod +x makedeb.sh
+  #- chmod +x makedeb.sh
 script:
   - bash ./script.sh
