Change travis for fedora

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
     - os: linux
       env: DIST=ubuntu17.10
       services: docker
+    - os: linux
+      env: DIST=fedora27
+      services: docker
 before_install:
   - chmod +x script.sh
 script:
