Build for Ubuntu 18.04 enable uploading assets

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ matrix:
       env: DIST=ubuntu17.10
       services: docker
     - os: linux
+      env: DIST=ubuntu18.04
+      services: docker
+    - os: linux
       env: DIST=fedora27
       services: docker
 before_install:
