generate deploy artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        container: [ "ubuntu:18.04", "ubuntu:19.04", "fedora:30", "fedora:31", "archlinux:latest" ]
+        container: [ "ubuntu:18.04", "ubuntu:19.04", "ubuntu:20.04", "fedora:28", "fedora:29", "fedora:30", "fedora:31", "archlinux:latest" ]
     runs-on: [ "ubuntu-latest" ]
     container:
       image: ${{ matrix.container }}
@@ -15,7 +15,13 @@ jobs:
         DEPLOY: ${{ contains(github.event.head_commit.message, 'deploy+') }}
     steps:
       - name: checkout-buildman
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
       - name: run-buildman
         shell: bash
         run: ./script.sh
+      - name: upload-artifacts
+        if: contains(github.event.head_commit.message, 'deploy+')
+        uses: actions/upload-artifact@v1
+        with:
+          name: package-archives
+          path: artifact
