--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v1
       - name: run-buildman
         shell: bash
-        run: ./script.sh
+        run: ./build.sh
       - name: upload-artifacts
         if: contains(github.event.head_commit.message, 'deploy+')
         uses: actions/upload-artifact@v1
